Se definio super usuario para usar panel admin

--- a/MVT_Project/MVT_App/templates/MVT_App/index.html
+++ b/MVT_Project/MVT_App/templates/MVT_App/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
 
-<center><h1>Familia Barbenza</h1></center>
+<center><h1 style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDiXK3PSLKBHS7_iWfolx4759t20l-vPQAycwXj0PcM3Iy9BoWoZJvIM4LqrFiq2EYUb8&usqp=CAU');">Familia Barbenza</h1></center>
 <hr>
 {% for flia in familia %}
     <p><b>Apellido:</b> {{flia.apellido}} | <b>Nombre:</b> {{flia.nombre}} | <b>Fecha de Nacimiento:</b> {{flia.fecha_nac}} | <b>DNI:</b> {{flia.dni}} </p>  
 {% endfor %}
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDiXK3PSLKBHS7_iWfolx4759t20l-vPQAycwXj0PcM3Iy9BoWoZJvIM4LqrFiq2EYUb8&usqp=CAU" alt="Rias">
 
 </body>
 </html>
